--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <title>yetone 的博客</title>
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/default.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
+  <link rel="stylesheet" href="css/default.min.css">
+  <script src="js/highlight.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/marked.min.js"></script>
   <script src="js/moment.min.js"></script>
