--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>yetone 的博客</title>
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/default.min.css">
+  <link rel="stylesheet" href="css/github.min.css">
   <script src="js/highlight.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/marked.min.js"></script>
