--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/app.js"></script>
   <script type="text/template" id="gist-list-tpl">
     {% for _, gist in gists %}
-    <div class="gist-item" data-id="{{ gist.id }}" data-raw="{{ gist.files['gistfile1.md'].raw_url }}">
+    <div class="gist-item" data-id="{{ gist.id }}" data-raw="{{ gist.files[filename].raw_url }}">
       <a class="gist-title" href="#/blog/{{ gist.id }}">
         {{ gist.description }}
       </a>
