--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       <a class="blog-created-at" target="_blank" href="{{ html_url }}">{{ moment(created_at).format('YYYY-MM-DD HH:mm:ss') }}</a>
     </div>
   </script>
+  <script type="text/template" id="gist-file-tpl">
+    <div class="file">
+      <div class="file-header">
+        <span class="icon">
+          <b class="octicon octicon-gist"></b>
+        </span>
+        <a target="_blank" class="raw-url" href="{{ file.raw_url }}">{{ file.filename }}</a>
+      </div>
+      <div class="file-content">
+        {{ marked('```' + (file.language ? file.language.toLowerCase() : '') + '\n' + txt + '\n```') }}
+      </div>
+    </div>
+  </script>
 </head>
 <body>
   <div id="wrapper">
