--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
   <script type="text/template" id="gist-detail-tpl">
     <div data-version="0.1.1" id="gist-container">
-      <div class="blog-title"> {{ title }}</div>
+      <h1 class="blog-title"> {{ title }}</h1>
       <div class="blog-content">{{ content }}</div>
       <a class="blog-created-at" target="_blank" href="{{ html_url }}">{{ moment(created_at).format('YYYY-MM-DD HH:mm:ss') }}</a>
     </div>
