--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a target="_blank" class="raw-url" href="{{ file.raw_url }}">{{ file.filename }}</a>
       </div>
       <div class="file-content">
-        {{ marked('```' + (file.language ? file.language.toLowerCase() : '') + '\n' + txt + '\n```') }}
+        {{ marked('```' + (file.language ? file.language.toLowerCase() : '') + '\n' + file.content + '\n```') }}
       </div>
     </div>
   </script>
